--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./vendor/normalize.css" rel="stylesheet" />
-    <link href="./fonts/inter_web/inter.css" rel="stylesheet" />
+    <link href="./pages/index.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
     <title>Место</title>
   </head>
@@ -14,8 +13,28 @@
       <header class="header">
         <div class="header__logo"></div>
       </header>
-      <div class="main"></div>
+      <div class="main">
+        <section class="profile">
+          <div class="profile__container">
+            <img
+              src="./images/avatar/avatar.jpg"
+              alt="Жак-Ив Кусто"
+              class="profile__image"
+            />
+
+            <div class="profile__info-container">
+              <h1 class="profile__title">Жак-Ив Кусто</h1>
+              <button
+                type="button"
+                class="button profile__button-edit"
+              ></button>
+              <p class="profile__profession">Исследователь океана</p>
+            </div>
+          </div>
+          <div type="button" class="button profile__button-plus"></div>
+        </section>
+      </div>
     </div>
-    <div class="footer footer"></div>
+    <footer class="footer"></footer>
   </body>
 </html>
