feat: add elements and footer

--- a/index.html
+++ b/index.html
@@ -33,8 +33,92 @@
           </div>
           <div type="button" class="button profile__button-plus"></div>
         </section>
+        <section class="elements">
+          <ul class="element__list">
+            <li class="element__list-item">
+              <img
+                src="./images/gallery/karach.jpg"
+                alt="Карачаевск"
+                class="element__image"
+              />
+              <div class="element__content">
+                <h2 class="element__title">Карачаевск</h2>
+                <button
+                  class="button button__like button__like-active"
+                ></button>
+              </div>
+            </li>
+            <li class="element__list-item">
+              <img
+                src="./images/gallery/elb.png"
+                alt="Гора Эльбрус"
+                class="element__image"
+              />
+              <div class="element__content">
+                <h2 class="element__title">Гора Эльбрус</h2>
+                <button
+                  class="button button__like button__like-active"
+                ></button>
+              </div>
+            </li>
+            <li class="element__list-item">
+              <img
+                src="./images/gallery/domb.png"
+                alt="Домбай"
+                class="element__image"
+              />
+              <div class="element__content">
+                <h2 class="element__title">Домбай</h2>
+                <button
+                  class="button button__like button__like-active"
+                ></button>
+              </div>
+            </li>
+            <li class="element__list-item">
+              <img
+                src="./images/gallery/almaty2.jpg"
+                alt="Алматы"
+                class="element__image"
+              />
+              <div class="element__content">
+                <h2 class="element__title">Алматы</h2>
+                <button
+                  class="button button__like button__like-active"
+                ></button>
+              </div>
+            </li>
+            <li class="element__list-item">
+              <img
+                src="./images/gallery/london2.jpg"
+                alt="Лондон"
+                class="element__image"
+              />
+              <div class="element__content">
+                <h2 class="element__title">Лондон</h2>
+                <button
+                  class="button button__like button__like-active"
+                ></button>
+              </div>
+            </li>
+            <li class="element__list-item">
+              <img
+                src="./images/gallery/tel-avivo.jpg"
+                alt="Тель-Авив"
+                class="element__image"
+              />
+              <div class="element__content">
+                <h2 class="element__title">Тель-Авив</h2>
+                <button
+                  class="button button__like button__like-active"
+                ></button>
+              </div>
+            </li>
+          </ul>
+        </section>
       </div>
+      <footer class="footer">
+        <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
+      </footer>
     </div>
-    <footer class="footer"></footer>
   </body>
 </html>
