--- a/index.html
+++ b/index.html
@@ -119,6 +119,24 @@
       <footer class="footer">
         <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
       </footer>
+
+      <div class="popup">
+        <form class="popup__form">
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <input type="text" class="popup__input popup__input-name" />
+          <input type="text" class="popup__input popup__input-prof" />
+          <button
+            type="submit"
+            class="button popup__button-submit"
+            value="Сохранить"
+          >
+            Сохранить
+          </button>
+          <button class="button popup__button-close"></button>
+        </form>
+      </div>
     </div>
+
+    <script src="main.js"></script>
   </body>
 </html>
