--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./pages/index.css" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
     <title>Место</title>
   </head>
   <body>
@@ -33,7 +32,7 @@
           </div>
           <div type="button" class="button profile__button-plus"></div>
         </section>
-        <section class="elements">
+        <section class="element">
           <ul class="element__list">
             <li class="element__list-item">
               <img
@@ -43,9 +42,7 @@
               />
               <div class="element__content">
                 <h2 class="element__title">Карачаевск</h2>
-                <button
-                  class="button button__like button__like-active"
-                ></button>
+                <button class="button element__button-like"></button>
               </div>
             </li>
             <li class="element__list-item">
@@ -56,9 +53,7 @@
               />
               <div class="element__content">
                 <h2 class="element__title">Гора Эльбрус</h2>
-                <button
-                  class="button button__like button__like-active"
-                ></button>
+                <button class="button element__button-like"></button>
               </div>
             </li>
             <li class="element__list-item">
@@ -69,9 +64,7 @@
               />
               <div class="element__content">
                 <h2 class="element__title">Домбай</h2>
-                <button
-                  class="button button__like button__like-active"
-                ></button>
+                <button class="button element__button-like"></button>
               </div>
             </li>
             <li class="element__list-item">
@@ -82,9 +75,7 @@
               />
               <div class="element__content">
                 <h2 class="element__title">Алматы</h2>
-                <button
-                  class="button button__like button__like-active"
-                ></button>
+                <button class="button element__button-like"></button>
               </div>
             </li>
             <li class="element__list-item">
@@ -95,9 +86,7 @@
               />
               <div class="element__content">
                 <h2 class="element__title">Лондон</h2>
-                <button
-                  class="button button__like button__like-active"
-                ></button>
+                <button class="button element__button-like"></button>
               </div>
             </li>
             <li class="element__list-item">
@@ -108,9 +97,7 @@
               />
               <div class="element__content">
                 <h2 class="element__title">Тель-Авив</h2>
-                <button
-                  class="button button__like button__like-active"
-                ></button>
+                <button class="button element__button-like"></button>
               </div>
             </li>
           </ul>
