--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header class="header">
         <div class="header__logo"></div>
       </header>
-      <div class="main">
+      <main class="main">
         <section class="profile">
           <div class="profile__container">
             <img
@@ -102,7 +102,7 @@
             </li>
           </ul>
         </section>
-      </div>
+      </main>
       <footer class="footer">
         <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
       </footer>
