--- a/index.html
+++ b/index.html
@@ -22,82 +22,84 @@
             />
 
             <div class="profile__info-container">
-              <h1 class="profile__title">Жак-Ив Кусто</h1>
-              <button
-                type="button"
-                class="button profile__button-edit"
-              ></button>
+              <div class="profile__box">
+                <h1 class="profile__title">Жак-Ив Кусто</h1>
+                <button
+                  type="button"
+                  class="button profile__button-edit"
+                ></button>
+              </div>
               <p class="profile__profession">Исследователь океана</p>
             </div>
           </div>
           <div type="button" class="button profile__button-plus"></div>
         </section>
-        <section class="element">
-          <ul class="element__list">
-            <li class="element__list-item">
+        <section class="gallery">
+          <ul class="gallery__list">
+            <li class="gallery__list-item">
               <img
                 src="./images/gallery/karach.jpg"
                 alt="Карачаевск"
-                class="element__image"
+                class="gallery__image"
               />
-              <div class="element__content">
-                <h2 class="element__title">Карачаевск</h2>
-                <button class="button element__button-like"></button>
+              <div class="gallery__content">
+                <h2 class="gallery__title">Карачаевск</h2>
+                <button class="button gallery__button"></button>
               </div>
             </li>
-            <li class="element__list-item">
+            <li class="gallery__list-item">
               <img
                 src="./images/gallery/elb.png"
                 alt="Гора Эльбрус"
-                class="element__image"
+                class="gallery__image"
               />
-              <div class="element__content">
-                <h2 class="element__title">Гора Эльбрус</h2>
-                <button class="button element__button-like"></button>
+              <div class="gallery__content">
+                <h2 class="gallery__title">Гора Эльбрус</h2>
+                <button class="button gallery__button"></button>
               </div>
             </li>
-            <li class="element__list-item">
+            <li class="gallery__list-item">
               <img
                 src="./images/gallery/domb.png"
                 alt="Домбай"
-                class="element__image"
+                class="gallery__image"
               />
-              <div class="element__content">
-                <h2 class="element__title">Домбай</h2>
-                <button class="button element__button-like"></button>
+              <div class="gallery__content">
+                <h2 class="gallery__title">Домбай</h2>
+                <button class="button gallery__button"></button>
               </div>
             </li>
-            <li class="element__list-item">
+            <li class="gallery__list-item">
               <img
                 src="./images/gallery/almaty2.jpg"
                 alt="Алматы"
-                class="element__image"
+                class="gallery__image"
               />
-              <div class="element__content">
-                <h2 class="element__title">Алматы</h2>
-                <button class="button element__button-like"></button>
+              <div class="gallery__content">
+                <h2 class="gallery__title">Алматы</h2>
+                <button class="button gallery__button"></button>
               </div>
             </li>
-            <li class="element__list-item">
+            <li class="gallery__list-item">
               <img
                 src="./images/gallery/london2.jpg"
                 alt="Лондон"
-                class="element__image"
+                class="gallery__image"
               />
-              <div class="element__content">
-                <h2 class="element__title">Лондон</h2>
-                <button class="button element__button-like"></button>
+              <div class="gallery__content">
+                <h2 class="gallery__title">Лондон</h2>
+                <button class="button gallery__button"></button>
               </div>
             </li>
-            <li class="element__list-item">
+            <li class="gallery__list-item">
               <img
                 src="./images/gallery/tel-avivo.jpg"
                 alt="Тель-Авив"
-                class="element__image"
+                class="gallery__image"
               />
-              <div class="element__content">
-                <h2 class="element__title">Тель-Авив</h2>
-                <button class="button element__button-like"></button>
+              <div class="gallery__content">
+                <h2 class="gallery__title">Тель-Авив</h2>
+                <button class="button gallery__button"></button>
               </div>
             </li>
           </ul>
