--- a/index.html
+++ b/index.html
@@ -24,15 +24,12 @@
             <div class="profile__info-container">
               <div class="profile__box">
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
-                <button
-                  type="button"
-                  class="button profile__button-edit"
-                ></button>
+                <button type="button" class="button button__edit"></button>
               </div>
               <p class="profile__profession">Исследователь океана</p>
             </div>
           </div>
-          <div type="button" class="button profile__button-plus"></div>
+          <button type="button" class="button button__plus"></button>
         </section>
         <section class="gallery">
           <ul class="gallery__list">
@@ -44,7 +41,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Карачаевск</h2>
-                <button class="button gallery__button"></button>
+                <button class="button button__like"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -55,7 +52,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Гора Эльбрус</h2>
-                <button class="button gallery__button"></button>
+                <button class="button button__like"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -66,7 +63,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Домбай</h2>
-                <button class="button gallery__button"></button>
+                <button class="button button__like"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -77,7 +74,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Алматы</h2>
-                <button class="button gallery__button"></button>
+                <button class="button button__like"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -88,7 +85,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Лондон</h2>
-                <button class="button gallery__button"></button>
+                <button class="button button__like"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -99,7 +96,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Тель-Авив</h2>
-                <button class="button gallery__button"></button>
+                <button class="button button__like"></button>
               </div>
             </li>
           </ul>
@@ -108,24 +105,19 @@
       <footer class="footer">
         <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
       </footer>
-
       <div class="popup">
         <form class="popup__form">
           <h2 class="popup__title">Редактировать профиль</h2>
           <input type="text" class="popup__input popup__input-name" />
           <input type="text" class="popup__input popup__input-prof" />
-          <button
-            type="submit"
-            class="button popup__button-submit"
-            value="Сохранить"
-          >
+          <button type="submit" class="button button__submit" value="Сохранить">
             Сохранить
           </button>
-          <button class="button popup__button-close"></button>
+          <button class="button button__close"></button>
         </form>
       </div>
     </div>
 
-    <script src="main.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
