--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <button type="submit" class="button button__submit" value="Сохранить">
             Сохранить
           </button>
-          <button class="button button__close"></button>
+          <button type="button" class="button button__close"></button>
         </form>
       </div>
     </div>
