--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <div class="profile__info-container">
               <div class="profile__box">
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
-                <button type="button" class="button button__edit"></button>
+                <button type="button" class="profile__edit-button"></button>
               </div>
               <p class="profile__profession">Исследователь океана</p>
             </div>
           </div>
-          <button type="button" class="button button__plus"></button>
+          <button type="button" class="profile__plus-button"></button>
         </section>
         <section class="gallery">
           <ul class="gallery__list">
@@ -41,7 +41,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Карачаевск</h2>
-                <button class="button button__like"></button>
+                <button class="gallery__like-button"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -52,7 +52,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Гора Эльбрус</h2>
-                <button class="button button__like"></button>
+                <button class="gallery__like-button"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -63,7 +63,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Домбай</h2>
-                <button class="button button__like"></button>
+                <button class="gallery__like-button"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -74,7 +74,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Алматы</h2>
-                <button class="button button__like"></button>
+                <button class="gallery__like-button"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -85,7 +85,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Лондон</h2>
-                <button class="button button__like"></button>
+                <button class="gallery__like-button"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -96,7 +96,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Тель-Авив</h2>
-                <button class="button button__like"></button>
+                <button class="gallery__like-button"></button>
               </div>
             </li>
           </ul>
@@ -110,10 +110,10 @@
           <h2 class="popup__title">Редактировать профиль</h2>
           <input type="text" class="popup__input popup__input-name" />
           <input type="text" class="popup__input popup__input-prof" />
-          <button type="submit" class="button button__submit" value="Сохранить">
+          <button type="submit" class="popup__submit-button" value="Сохранить">
             Сохранить
           </button>
-          <button type="button" class="button button__close"></button>
+          <button type="button" class="popup__close-button"></button>
         </form>
       </div>
     </div>
