fix: fix comments from yandex

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Карачаевск</h2>
-                <button class="gallery__like-button"></button>
+                <button type="button" class="gallery__like-button"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -52,7 +52,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Гора Эльбрус</h2>
-                <button class="gallery__like-button"></button>
+                <button type="button" class="gallery__like-button"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -63,7 +63,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Домбай</h2>
-                <button class="gallery__like-button"></button>
+                <button type="button" class="gallery__like-button"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -74,7 +74,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Алматы</h2>
-                <button class="gallery__like-button"></button>
+                <button type="button" class="gallery__like-button"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -85,7 +85,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Лондон</h2>
-                <button class="gallery__like-button"></button>
+                <button type="button" class="gallery__like-button"></button>
               </div>
             </li>
             <li class="gallery__list-item">
@@ -96,7 +96,7 @@
               />
               <div class="gallery__content">
                 <h2 class="gallery__title">Тель-Авив</h2>
-                <button class="gallery__like-button"></button>
+                <button type="button" class="gallery__like-button"></button>
               </div>
             </li>
           </ul>
@@ -106,10 +106,10 @@
         <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
       </footer>
       <div class="popup">
-        <form class="popup__form">
+        <form name="formChange" class="popup__form">
           <h2 class="popup__title">Редактировать профиль</h2>
-          <input type="text" class="popup__input popup__input-name" />
-          <input type="text" class="popup__input popup__input-prof" />
+          <input type="text" class="popup__input popup__input_name" />
+          <input type="text" class="popup__input popup__input_prof" />
           <button type="submit" class="popup__submit-button" value="Сохранить">
             Сохранить
           </button>
