--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
       <div class="popup">
         <form name="formChange" class="popup__form">
           <h2 class="popup__title">Редактировать профиль</h2>
-          <input type="text" class="popup__input popup__input_text_name" />
-          <input type="text" class="popup__input popup__input_text_prof" />
+          <input type="text" class="popup__input popup__input_type_name" />
+          <input type="text" class="popup__input popup__input_type_prof" />
           <button type="submit" class="popup__submit-button" value="Сохранить">
             Сохранить
           </button>
