--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
         </div>
       </div>
     </div>
+    <div class="popup popup_image">
+      <div class="popup__image-container">
+        <img src="" alt="" class="popup__image-place" />
+        <p class="popup__image-title"></p>
+        <button type="button" class="popup__close-button"></button>
+      </div>
+    </div>
+
     <template class="gallery__template">
       <li class="gallery__list-item">
         <button class="gallery__delete-button"></button>
