fix: fix zoom popup

--- a/index.html
+++ b/index.html
@@ -77,19 +77,21 @@
           <button type="button" class="popup__close-button"></button>
         </div>
       </div>
-    </div>
-    <div class="popup popup_image">
-      <div class="popup__image-container">
-        <img src="" alt="" class="popup__image-place" />
-        <p class="popup__image-title"></p>
-        <button type="button" class="popup__close-button"></button>
+      <div class="popup popup_image popup_style">
+        <div class="popup__image-container">
+          <img src="" alt="" class="popup__image-place" />
+          <p class="popup__image-title"></p>
+          <button type="button" class="popup__close-button"></button>
+        </div>
       </div>
     </div>
 
     <template class="gallery__template">
       <li class="gallery__list-item">
         <button class="gallery__delete-button"></button>
-        <img src="" alt="" class="gallery__image" />
+        <div class="gallery__image-container">
+          <img src="" alt="" class="gallery__image" />
+        </div>
         <div class="gallery__content">
           <h2 class="gallery__title"></h2>
           <button type="button" class="gallery__like-button"></button>
