fix: fix button name

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               class="popup__input popup__input_type_link"
               placeholder="Ссылка на картинку"
             />
-            <button type="submit" class="popup__submit-button">Добавить</button>
+            <button type="submit" class="popup__submit-button">Создать</button>
           </form>
           <button type="button" class="popup__close-button"></button>
         </div>
