fix: fix img src

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
       <div class="popup popup_image popup_style">
         <div class="popup__image-container">
-          <img src="" alt="" class="popup__image-place" />
+          <img src="#" alt="#" class="popup__image-place" />
           <p class="popup__image-title"></p>
           <button type="button" class="popup__close-button"></button>
         </div>
@@ -90,7 +90,7 @@
       <li class="gallery__list-item">
         <button class="gallery__delete-button"></button>
         <div class="gallery__image-container">
-          <img src="" alt="" class="gallery__image" />
+          <img src="#" alt="#" class="gallery__image" />
         </div>
         <div class="gallery__content">
           <h2 class="gallery__title"></h2>
