--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <footer class="footer">
         <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
       </footer>
-      <div class="popup">
+      <div class="popup popup_profile">
         <div class="popup__container">
           <h2 class="popup__title">Редактировать профиль</h2>
           <form name="changeProfile" class="popup__form">
@@ -98,6 +98,7 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/cards.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
