--- a/index.html
+++ b/index.html
@@ -37,19 +37,26 @@
       <footer class="footer">
         <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
       </footer>
+
       <div class="popup popup_profile">
         <div class="popup__container">
           <h2 class="popup__title">Редактировать профиль</h2>
-          <form name="changeProfile" class="popup__form">
+          <form name="changeProfile" class="popup__form" novalidate>
             <input
               type="text"
               class="popup__input popup__input_type_name"
               placeholder="Имя"
+              minlength="2"
+              maxlength="40"
+              required
             />
             <input
               type="text"
               class="popup__input popup__input_type_prof"
               placeholder="Профессия"
+              minlength="2"
+              maxlength="200"
+              required
             />
             <button type="submit" class="popup__submit-button">
               Сохранить
@@ -61,16 +68,20 @@
       <div class="popup popup_new-place">
         <div class="popup__container">
           <h2 class="popup__title">Новое место</h2>
-          <form name="createPlace" class="popup__form">
+          <form name="createPlace" class="popup__form" novalidate>
             <input
               type="text"
               class="popup__input popup__input_type_place"
               placeholder="Название"
+              required
+              minlength="2"
+              maxlength="30"
             />
             <input
-              type="text"
               class="popup__input popup__input_type_link"
               placeholder="Ссылка на картинку"
+              required
+              type="url"
             />
             <button type="submit" class="popup__submit-button">Создать</button>
           </form>
@@ -99,6 +110,7 @@
       </li>
     </template>
     <script type="module" src="./scripts/cards.js"></script>
+    <script type="module" src="./scripts/validate.js"></script>
     <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
