add: validation on first popup

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
               minlength="2"
               maxlength="40"
               required
+              name="name"
             />
             <input
               type="text"
@@ -57,6 +58,7 @@
               minlength="2"
               maxlength="200"
               required
+              name="prof"
             />
             <button type="submit" class="popup__submit-button">
               Сохранить
@@ -76,12 +78,14 @@
               required
               minlength="2"
               maxlength="30"
+              name="place"
             />
             <input
               class="popup__input popup__input_type_link"
               placeholder="Ссылка на картинку"
               required
               type="url"
+              name="link"
             />
             <button type="submit" class="popup__submit-button">Создать</button>
           </form>
