fix:  input 320px, span textContent, disabled button after create cars

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 required
                 name="name"
               />
-              <span class="popup__error"></span>
+              <span class="popup__error" id="name-error"></span>
             </label>
             <label class="popup__field">
               <input
@@ -64,7 +64,7 @@
                 required
                 name="prof"
               />
-              <span class="popup__error"></span>
+              <span class="popup__error" id="prof-error"></span>
             </label>
             <button
               disabled
@@ -91,7 +91,7 @@
                 maxlength="30"
                 name="place"
               />
-              <span class="popup__error"></span>
+              <span class="popup__error" id="place-error"></span>
             </label>
             <label class="popup__field">
               <input
@@ -101,7 +101,7 @@
                 type="url"
                 name="link"
               />
-              <span class="popup__error"></span>
+              <span class="popup__error" id="link-error"></span>
             </label>
             <button
               disabled
