--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@
         </div>
       </li>
     </template>
-    <script type="module" src="./scripts/cards.js"></script>
+    <script type="module" src="./scripts/card.js"></script>
     <script type="module" src="./scripts/validate.js"></script>
     <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/initialCards.js"></script>
   </body>
 </html>
