--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               type="submit"
               class="popup__submit-button popup__submit-button_disabled"
             >
-              Создатьпг
+              Создать
             </button>
           </form>
           <button type="button" class="popup__close-button"></button>
