fix: create initialization function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./pages/index.css" rel="stylesheet" />
     <title>Место</title>
   </head>
-  <body>
+  <body class="body">
     <div class="page">
       <header class="header">
         <div class="header__logo"></div>
@@ -134,9 +134,6 @@
         </div>
       </li>
     </template>
-    <script type="module" src="./scripts/card.js"></script>
-    <script type="module" src="./scripts/validate.js"></script>
     <script type="module" src="./scripts/index.js"></script>
-    <script type="module" src="./scripts/initialCards.js"></script>
   </body>
 </html>
