--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <button
               type="submit"
               class="popup__submit-button popup__submit-button_disabled"
+              disabled
             >
               Сохранить
             </button>
