fix: change initial button state logic

--- a/index.html
+++ b/index.html
@@ -66,11 +66,7 @@
               />
               <span class="popup__error" id="prof-error"></span>
             </label>
-            <button
-              type="submit"
-              class="popup__submit-button popup__submit-button_disabled"
-              disabled
-            >
+            <button type="submit" class="popup__submit-button">
               Сохранить
             </button>
           </form>
@@ -103,13 +99,7 @@
               />
               <span class="popup__error" id="link-error"></span>
             </label>
-            <button
-              disabled
-              type="submit"
-              class="popup__submit-button popup__submit-button_disabled"
-            >
-              Создать
-            </button>
+            <button type="submit" class="popup__submit-button">Создать</button>
           </form>
           <button type="button" class="popup__close-button"></button>
         </div>
