--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               />
               <span class="popup__error" id="prof-error"></span>
             </label>
-            <button type="submit" class="popup__submit-button">
+            <button type="submit" class="popup__submit-buttongit">
               Сохранить
             </button>
           </form>
