fix: update class popupWithForm

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 minlength="2"
                 maxlength="200"
                 required
-                name="prof"
+                name="job"
               />
-              <span class="popup__error" id="prof-error"></span>
+              <span class="popup__error" id="job-error"></span>
             </label>
             <button type="submit" class="popup__submit-button">
               Сохранить
