fix: class PopupWithForm

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                 required
                 minlength="2"
                 maxlength="30"
-                name="place"
+                name="name"
               />
-              <span class="popup__error" id="place-error"></span>
+              <span class="popup__error" id="name-error"></span>
             </label>
             <label class="popup__field">
               <input
