--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
       <main class="main">
         <section class="profile">
           <div class="profile__container">
-            <img
-              src="./images/avatar/avatar.jpg"
-              alt="Жак-Ив Кусто"
-              class="profile__image"
-            />
+            <div class="profile__image-container">
+              <img
+                src="./images/avatar/avatar.jpg"
+                alt="Жак-Ив Кусто"
+                class="profile__image"
+              />
+            </div>
             <div class="profile__info-container">
               <div class="profile__box">
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
