--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./pages/index.css" rel="stylesheet" />
+    <!-- <link href="./pages/index.css" rel="stylesheet" /> -->
     <title>Место</title>
   </head>
   <body class="body">
@@ -17,7 +17,7 @@
           <div class="profile__container">
             <div class="profile__image-container">
               <img
-                src="./images/avatar/avatar.jpg"
+                src="<%=require('./images/avatar/avatar.jpg')%>"
                 alt="Жак-Ив Кусто"
                 class="profile__image"
               />
@@ -127,6 +127,5 @@
         </div>
       </li>
     </template>
-    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
