fix: fix ID name in HTML

--- a/src/index.html
+++ b/src/index.html
@@ -87,9 +87,9 @@
                 required
                 minlength="2"
                 maxlength="30"
-                name="name"
+                name="place"
               />
-              <span class="popup__error" id="name-error"></span>
+              <span class="popup__error" id="place-error"></span>
             </label>
             <label class="popup__field">
               <input
