fix: fix class formValidation

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
               />
               <span class="popup__error" id="job-error"></span>
             </label>
-            <button type="submit" class="popup__submit-button">
+            <button type="submit" class="popup__submit-button" disabled>
               Сохранить
             </button>
           </form>
@@ -100,7 +100,9 @@
               />
               <span class="popup__error" id="link-error"></span>
             </label>
-            <button type="submit" class="popup__submit-button">Создать</button>
+            <button type="submit" class="popup__submit-button" disabled>
+              Создать
+            </button>
           </form>
           <button type="button" class="popup__close-button"></button>
         </div>
