--- a/src/index.html
+++ b/src/index.html
@@ -114,6 +114,8 @@
           <button type="button" class="popup__close-button"></button>
         </div>
       </div>
+
+      <div class="popup popup_active popup_loader popup_style"></div>
     </div>
 
     <template class="gallery__template">
@@ -124,7 +126,10 @@
         </div>
         <div class="gallery__content">
           <h2 class="gallery__title"></h2>
-          <button type="button" class="gallery__like-button"></button>
+          <div class="gallery__like-container">
+            <button type="button" class="gallery__like-button"></button>
+            <span class="gallery__like-count">0</span>
+          </div>
         </div>
       </li>
     </template>
