--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,20 @@
           <button type="button" class="popup__close-button"></button>
         </div>
       </div>
+
+      <div class="popup popup_confirmation popup_style">
+        <div class="popup__container">
+          <h2 class="popup__confirmation-title">Вы уверены?</h2>
+          <button type="button" class="popup__close-button"></button>
+          <button
+            type="submit"
+            class="popup__submit-button popup__submit-button_confirmation"
+          >
+            Да
+          </button>
+        </div>
+      </div>
+
       <div class="popup popup_image popup_style">
         <div class="popup__image-container">
           <img src="#" alt="#" class="popup__image-place" />
@@ -114,7 +128,6 @@
           <button type="button" class="popup__close-button"></button>
         </div>
       </div>
-
       <div class="popup popup_active popup_loader popup_style"></div>
     </div>
 
