--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
           <div class="profile__container">
             <div class="profile__image-container">
               <img
-                src="<%=require('./images/avatar/avatar.jpg')%>"
+                src="<%=require('./images/loader.svg')%>"
                 alt="Жак-Ив Кусто"
                 class="profile__image"
               />
@@ -141,9 +141,9 @@
                 placeholder="Ссылка на картинку"
                 required
                 type="url"
-                name="link-avatar"
+                name="avatar"
               />
-              <span class="popup__error" id="link-avatar-error"></span>
+              <span class="popup__error" id="avatar-error"></span>
             </label>
             <button type="submit" class="popup__submit-button" disabled>
               Сохранить
